--- a/templates/about.html
+++ b/templates/about.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
+
+<html lang="en" dir="ltr" xmlns="http://www.w3.org/1999/html"><head>
     <meta charset="utf-8">
          <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-        {% extends "template.html" %}
-          {% block content %}
+
+<!----------------------------- BODY START ----------------------------->
+
+<body>
+
+ {% extends "template.html" %}
+ {% block content %}
+
   <hr><center>
     <h2>Aim, objective and responsibilities of the project:  </h2>
     <hr>
@@ -20,45 +26,38 @@
 • And have a live view where it shows incomplete jobs. <br></h7><hr/>
 
   <h3>Front-end</h3>
-<hr>
-<h7>•	HTML — to style the web page. <br>
+<hr><h7>•	HTML — to style the web page. <br>
 •	CSS — to style the web page. <br>
 •	Bootstrap — for frontend design, responsive and mobile-first website.<br></h7><hr/>
 
 
   <h3>Back-end</h3>
-<hr>
-<h7>•	Python - version 3.10. <br>
+<hr><h7>•	Python - version 3.10. <br>
 •	PyCharm — to run the application. <br>
 •	Flask — base for everything.<br>
 •	Flask-SQLAlchemy — database ORM layer build on top of SQLAlchemy with depth.<br></h7><hr/>
 
 
 <h3>DataBase</h3>
-<hr>
-<h7>•	MySQL — Workbench to design, model, generate and manage database.<br></h7><hr/>
+<hr><h7>•	MySQL — Workbench to design, model, generate and manage database.<br></h7><hr/>
 
 <h3>Testing</h3>
-<hr>
-<h7>•	UnitTesting. <br></h7><hr/>
+<hr><h7>•	UnitTesting. <br></h7><hr/>
 
 <h3>Workplace Communication Tool</h3>
-<hr>
-<h7>•	Microsoft Teams — to communicate with the team.</h7><br></h7><hr/>
+<hr><h7>•	Microsoft Teams — to communicate with the team.</h7><br></h7><hr/>
 
 <h3>Code Hosting Platform</h3>
-<hr>
-<h7>•	GitHub — for collaboration and version control.<br></h7><hr/>
+<hr><h7>•	GitHub — for collaboration and version control.<br></h7><hr/>
 
 <h4>This python project is designed as a part of the DevOps apprenticeship level 4 in Feb 2023
 </h4>
     </center>
-
  </p>
 
+{% endblock %}
+</body>
 
-    {% endblock %}
+<!----------------------------- BODY END ----------------------------->
 
-  </head>
 </html>
-
