--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
+
+<html lang="en" dir="ltr" xmlns="http://www.w3.org/1999/html"><head>
     <meta charset="utf-8">
          <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-        {% extends "template.html" %}
-          {% block content %}
+<!----------------------------- BODY START ----------------------------->
+
+
+ {% extends "template.html" %}
+ {% block content %}
 
   <hr><center>
     <h2>Contact Us </h2>
     <hr>
 <h7> Employer Name: S2R Analytics Ltd.<br>
-Provider: QA Ltd.<br>
+    Training Provider: QA Ltd.<br>
 Designed by: Purvi Thakkar.<br></h7><hr/></center>
 
-    {% endblock %}
+   {% endblock %}
+
+
+<!----------------------------- BODY END ----------------------------->
 
 </html>
+
+
 
