--- a/templates/home.html
+++ b/templates/home.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
+
+<html lang="en" dir="ltr" xmlns="http://www.w3.org/1999/html"><head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+         <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    {% extends "template.html" %}
-    {% block content %}
+<!----------------------------- BODY START ----------------------------->
+ {% extends "template.html" %}
+ {% block content %}
+
       <center>
     <hr>
      <h2 class="mb-3">Python Project using Flask and SQL </h2>
       <h5class="mb-3">(S2R Analytics - QA DevOps Apprenticeship Level 4.)<hr></h5>
     </center>
 
-    {% endblock %}
+
+  {% endblock %}
 
 
-  </head>
+<!----------------------------- BODY END ----------------------------->
+
 </html>
