--- a/templates/template.html
+++ b/templates/template.html
@@ -1,68 +1,86 @@
 <!DOCTYPE html>
+
+<!----------------------------- INTEGRATE BOOTSTRAP ----------------------------->
+
 <html lang="en" dir="ltr" xmlns="http://www.w3.org/1999/html">
  <head>
-   <link rel="stylesheet" href="{{ url_for('static',     filename='css/template.css') }}">
- </head>
- <header>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white">
-    <div class="container-fluid">
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-mdb-toggle="collapse"
-        data-mdb-target="#navbarExample01"
-        aria-controls="navbarExample01"
-        aria-expanded="false"
-        aria-label="Toggle navigation">
-        <i class="fas fa-bars"></i>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarExample01">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item active">
-            <a class="nav-link" aria-current="page" href="{{ url_for('home') }}">Home</a></li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('about') }}">About</a></li>
-            <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('top20') }}">Top 20</a></li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('contactus') }}">Contact</a></li>
+    <meta charset="utf-8">
+         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        </ul>
-      </div>
-    </div>
-  </nav>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+   <link rel="stylesheet" href="/static/css/template.css">
+
+
+<!----------------------------- HEADER START ----------------------------->
+
+    <header>
+<!----------------------------- NAVBAR ----------------------------->
+         <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="/">Home <span class="sr-only"></span></a></li>
+      <li class="nav-item">
+        <a class="nav-link" href="/about">About</a></li>
+      <li class="nav-item">
+        <a class="nav-link" href="/top20">Top 20</a></li>
+        <li class="nav-item">
+        <a class="nav-link" href="/top50">Top 50</a></li>
+      <li class="nav-item">
+        <a class="nav-link" href="/top100">Top 100</a></li>
+      <li class="nav-item">
+        <a class="nav-link" href="/contactus">Contact</a></li>
+        <li class="nav-item">
+        <a class="nav-link" href="/contactus">Contact</a></li>
+      </li>
+    </ul>
+  </div>
+</nav>
+        <!----------------------------- BUTTONS ----------------------------->
 
   <div class="p-5 text-center bg-light">
-    <h1 class="mb-3">DevOps Apprenticeship</h1>
-    <h4 class="mb-3">Python Project</h4>
-    <a class="btn btn-primary" href="{{ url_for('top20') }}" role="button">Look at the latest queue</a>
+    <h1 class="mb-3">DevOps Project</h1>
+    <a class="btn btn-primary" href="/top20" role="button">Look at the top 20 queue</a>
+      <a class="btn btn-primary" href="/top100" role="button">Look at the top 50 queue</a>
+      <a class="btn btn-primary" href="/top100" role="button">Look at the top 100 queue</a>
   </div>
 </header>
-<body>
-    {% block content %}
-    {% endblock %}
-</body>
+<!----------------------------- HEADER END ----------------------------->
+
+<!----------------------------- BODY ----------------------------->
+
+ <body>
+        {% block content %}
+        {% endblock %}
+   </body>
+
+ <!----------------------------- BODY END ----------------------------->
 
 
-<!-- Footer -->
+<!----------------------------- FOOTER START ----------------------------->
+
 <footer class="text-center text-white" style="background-color: #0a4275;">
   <div class="Logo p-4">
     <section class="mb-4">
 <!--<img src="static/pictures/github.png" href="https://github.com/ThakkarPurvi" alt="Github" style="width:3%"  role="button">-->
 <!-- <img src="static/pictures/link.png" alt="LinkedIn" style="width:3%" href="https://www.linkedin.com/in/thakkarpurvilondon/" role="button">-->
       <!-- Linkedin -->
-      <a class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/in/thakkarpurvilondon/" role="button"
-        ><i class= <img src="static/pictures/LI-Logo.png" alt="LinkedIn" style="width:5%"></i></a>
+      <a class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/in/thakkarpurvilondon/" role="button"><i class="<img" src="static/pictures/LI-Logo.png" alt="LinkedIn" style="width:5%"></i></a>
 
       <!-- Github -->
-      <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/ThakkarPurvi" role="button"
-      ><i class= <img src="static/pictures/github.png" alt="Github" style="width:5%"></i></a>
+      <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/ThakkarPurvi" role="button"><i class="<img" src="static/pictures/github.png" alt="Github" style="width:5%"></i></a>
 
         <br>
-        <br><div class="text-center p-3" style="background-color: rgba(1, 0, 0, 0.2);">This project is a part of Level 4 DevOps Apprenticeship journey. Employer: S2R Analytics Ltd. Training Provider: QA Ltd.</a></div>
+        <br><div class="text-center p-3" style="background-color: rgba(1, 0, 0, 0.2);">This project is a part of Level 4 DevOps Apprenticeship journey. Employer: S2R Analytics Ltd. Training Provider: QA Ltd.</div>
   <div class="text-center p-3" style="background-color: rgba(1, 0, 0, 0.2);">
 
-      © 2023 Copyright: <a class="text-white" href=>Python Project -by Purvi Thakkar</a></div>
-</footer>
-</html>
+      © 2023 Copyright: <a class="text-white" href="">Python Project -by Purvi Thakkar</a></div>
+</section></div></footer>
+</center></body><!-- Footer --></html>
+
+<!----------------------------- FOOTER END ----------------------------->
