--- a/templates/top100.html
+++ b/templates/top100.html
@@ -7,18 +7,17 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-<!----------------------------- BODY START ----------------------------->
-
+ <!----------------------------- BODY START ----------------------------->
 
  {% extends "template.html" %}
-  {% block content %}
+ {% block content %}
 
 <center><h2 class="mb-3">Monitor Queue</h2>
-    <h2 class="mb-3">Latest 20 Triggers</h2> </center><hr/>
+    <h2 class="mb-3">Latest 100 Triggers</h2> </center><hr/>
       <center><div class="table-responsive">
-        <table class="table">
+        <table class="table"></table>
           <table class="table">
-  <caption>End of 20 trigger queue</caption>
+  <caption>End of 100 trigger queue</caption>
   <thead>
       <th scope="col">Id</th>
       <th scope="col">Job Id</th>
@@ -27,7 +26,7 @@
       <th scope="col">Trigger Time</th>
   </thead>
 
-{% for row in top20 %}
+{% for row in top100 %}
     <tr>
         <td>{{row["id"]}}</td>
         <td>{{row["job_id"]}}</td>
@@ -36,12 +35,11 @@
         <td>{{row["trigger_time"]}}</td>
     </tr>
 {% endfor %}
-
-          </table></div></center>
-
- {% endblock %}
+</table></div></center>
+{% endblock %}
 
 
 <!----------------------------- BODY END ----------------------------->
+
 
 </html>
