more  filters added

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 
-<html lang="en" dir="ltr" xmlns="http://www.w3.org/1999/html"><head>
+<html lang="en" dir="ltr" xmlns="http://www.w3.org/1999/html">
+<head>
+
     <meta charset="utf-8">
          <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,8 +15,8 @@
 
       <center>
     <hr>
-     <h2 class="mb-3">Python Project using Flask and SQL </h2>
-      <h5class="mb-3">(S2R Analytics - QA DevOps Apprenticeship Level 4.)<hr></h5>
+     <h2 class="mb-3">Python Project using Flask and SQL2 </h2>
+      <h5 class="mb-3">(S2R Analytics - QA DevOps Apprenticeship Level 4.)<hr></h5>
     </center>
 
 
