--- a/templates/template.html
+++ b/templates/template.html
@@ -2,15 +2,16 @@
 
 <!----------------------------- INTEGRATE BOOTSTRAP ----------------------------->
 
-<html lang="en" dir="ltr" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
+<!--      dir="ltr" xmlns="http://www.w3.org/1999/html">-->
  <head>
+              <title>Python Project using Flask and SQL </title>
+
     <meta charset="utf-8">
          <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-</head>
-   <link rel="stylesheet" href="/static/css/template.css">
 
 
 <!----------------------------- HEADER START ----------------------------->
@@ -26,17 +27,22 @@
       <li class="nav-item active">
         <a class="nav-link" href="/">Home <span class="sr-only"></span></a></li>
       <li class="nav-item">
-        <a class="nav-link" href="/about">About</a></li>
+        <a class="nav-link" href="/about">About     </a></li>
       <li class="nav-item">
-        <a class="nav-link" href="/top20">Top 20</a></li>
+        <a class="nav-link" href="/top20">Top 20    </a></li>
         <li class="nav-item">
-        <a class="nav-link" href="/top50">Top 50</a></li>
+        <a class="nav-link" href="/top50">Top 50    </a></li>
       <li class="nav-item">
-        <a class="nav-link" href="/top100">Top 100</a></li>
+        <a class="nav-link" href="/top100">Top 100    </a></li>
       <li class="nav-item">
-        <a class="nav-link" href="/contactus">Contact</a></li>
+          <a class="nav-link" href="/jobid">Job Id    </a></li>
         <li class="nav-item">
-        <a class="nav-link" href="/contactus">Contact</a></li>
+          <a class="nav-link" href="/hours24">24 Hours    </a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="/lastweek">Last Week    </a></li>
+        <li class="nav-item">
+            <a class="nav-link" href="/contactus">Contact</a></li>
+
       </li>
     </ul>
   </div>
@@ -45,9 +51,9 @@
 
   <div class="p-5 text-center bg-light">
     <h1 class="mb-3">DevOps Project</h1>
-    <a class="btn btn-primary" href="/top20" role="button">Look at the top 20 queue</a>
-      <a class="btn btn-primary" href="/top100" role="button">Look at the top 50 queue</a>
-      <a class="btn btn-primary" href="/top100" role="button">Look at the top 100 queue</a>
+    <a class="btn btn-primary" href="/top20" role="button">Top 20 Queue</a>
+      <a class="btn btn-primary" href="/lastweek" role="button">Last Week Queue</a>
+      <a class="btn btn-primary" href="/jobid" role="button">Job Id 23</a>
   </div>
 </header>
 <!----------------------------- HEADER END ----------------------------->
