--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
 
       <center>
     <hr>
-     <h2 class="mb-3">Python Project using Flask and SQL2 </h2>
+     <h2 class="mb-3">Python Project using Flask and SQL </h2>
       <h5 class="mb-3">(S2R Analytics - QA DevOps Apprenticeship Level 4.)<hr></h5>
     </center>
 
