--- a/templates/template.html
+++ b/templates/template.html
@@ -5,7 +5,7 @@
 <html lang="en">
 <!--      dir="ltr" xmlns="http://www.w3.org/1999/html">-->
  <head>
-              <title>Python Project using Flask and SQL </title>
+{#              <title>Python Project using Flask and SQL </title>#}
 
     <meta charset="utf-8">
          <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -53,7 +53,7 @@
     <h1 class="mb-3">DevOps Project</h1>
     <a class="btn btn-primary" href="/top20" role="button">Top 20 Queue</a>
       <a class="btn btn-primary" href="/lastweek" role="button">Last Week Queue</a>
-      <a class="btn btn-primary" href="/jobid" role="button">Job Id 23</a>
+      <a class="btn btn-primary" href="/jobid" role="button">Search using Job ID</a>
   </div>
 </header>
 <!----------------------------- HEADER END ----------------------------->
